# thesportsdb

./: LeaguesWithTeamvTeamFormats.json  MANIFEST.in  README.md  baseurl.txt  endpoints.txt  event_endpoints.txt  league_endpoints.txt  leagues.json  readthedocs.yml  release0.1.0.md  resources.json  setup.cfg  sport_league_map.json  sportid_name_map.json  sports.json  team_endpoints.txt  urls.txt  urls_resources.json
.github/: FUNDING.yml
.github/workflows/: pythonpublish.yml
docs/: api.rst  conf.py  contents.rst  event_info.json  index.rst  requirements.txt
tests/: test_search.py
thesportsdb/: __init__.py  countries.py  events.py  leagues.py  players.py  requests.py  search.py  settings.py  sports.py  teams.py
