[metadata]
name = thesportsdb
version = 0.0.0
description = Unofficial Python API client wrapper package around TheSportsDB.com API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TralahM/thesportsdb
author = Tralah M Brian
author_email = musyoki.brian@tralahtek.com
licence = GPLv3

classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content


[options]
include_package_data = true
packages = find:
install_requires =
    requests

[options.extras_require]
docs =
    sphinx
    sphinx-automodapi
    sphinx_rtd_theme
